--- a/IfFoundLockScreen/HelpSavePopup.xaml
+++ b/IfFoundLockScreen/HelpSavePopup.xaml
@@ -9,11 +9,14 @@
     Foreground="{StaticResource PhoneForegroundBrush}"
     d:DesignHeight="480" d:DesignWidth="480">
     
-    <Grid Height="250" Width="480" x:Name="LayoutRoot" Background="#CC000000">
+    <Grid Height="450" Width="480" x:Name="LayoutRoot" Background="#CC000000">
         <TextBlock x:Name="HelpSave" TextAlignment="Left" VerticalAlignment="Center"
                  TextWrapping="Wrap"
                        Margin="24,0,24,0" Style="{StaticResource PhoneTextTitle3Style}" Tap="HelpSave_Tap">
-            Helpful tips and maybe an image on how to save your wallpaper
+            When you tap this popup, I'll save a screenshot of the screen in your Saved Pictures album. That new screenshot will include your contact information exactly as you see it now on the screen.
+            <LineBreak/>
+            <LineBreak/>
+            Go back to your phone's Home, open Settings, then Lock+Wallpaper and choose the new custom wallpaper as your Lock Screen and never lose your phone again!
         </TextBlock>
 
     </Grid>
