--- a/IfFoundLockScreen/MainPage.xaml
+++ b/IfFoundLockScreen/MainPage.xaml
@@ -56,9 +56,11 @@
                        Margin="9,-7,0,0" Style="{StaticResource BolderPhoneTextTitle}"/>
             <TextBlock x:Name="FoundLine3" Text="{Binding Line3}" 
                        Margin="9,-7,0,0" Style="{StaticResource BolderPhoneTextTitle}"/>
+            <TextBlock x:Name="FoundLine4" Text="{Binding Line4}" 
+                       Margin="9,-7,0,0" Style="{StaticResource BolderPhoneTextTitle}"/>
         </StackPanel>
 
-        <StackPanel x:Name="TimePanel" Grid.Row="1" Margin="12,140,0,0" > <!-- L, T, R, B -->
+        <StackPanel x:Name="TimePanel" Grid.Row="1" Margin="12,110,0,0" > <!-- L, T, R, B -->
              <TextBlock x:Name="Time" Text="12:14" 
                        Margin="9,0,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
             <TextBlock x:Name="DayOfWeek" Text="Friday" 
