--- a/IfFoundLockScreen/MainPage.xaml
+++ b/IfFoundLockScreen/MainPage.xaml
@@ -39,8 +39,8 @@
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="350"/> <!-- the time is hard coded -->
         </Grid.RowDefinitions>
 
         <Grid Width="480" Height="800" Grid.RowSpan="2">
@@ -48,19 +48,20 @@
             <Border x:Name="DimBorder" Background="Black" Opacity="0.2"/>
         </Grid>
 
-        <StackPanel x:Name="LockTextPanel" Grid.Row="0" Margin="12,32,0,28" Tap="LockTextPanel_Tap">
+        <!-- 200  32 -->
+        <StackPanel x:Name="LockTextPanel" Grid.Row="0" Margin="12,32,0,0" Tap="LockTextPanel_Tap">
             <!--<TextBlock x:Name="ApplicationTitle" Text="lost phone lock screen" Style="{StaticResource PhoneTextContrastStyle}" Visibility="Collapsed"/>-->
-            <TextBlock x:Name="FoundLine1" Text="{Binding Line1}" 
+            <TextBlock x:Name="FoundLine1" Text="test" 
                        Margin="9,0,0,0" Style="{StaticResource BolderPhoneTextTitle}"/>
-            <TextBlock x:Name="FoundLine2" Text="{Binding Line2}"  
+            <TextBlock x:Name="FoundLine2" Text="test"  
                        Margin="9,-7,0,0" Style="{StaticResource BolderPhoneTextTitle}"/>
-            <TextBlock x:Name="FoundLine3" Text="{Binding Line3}" 
+            <TextBlock x:Name="FoundLine3" Text="test" 
                        Margin="9,-7,0,0" Style="{StaticResource BolderPhoneTextTitle}"/>
-            <TextBlock x:Name="FoundLine4" Text="{Binding Line4}" 
+            <TextBlock x:Name="FoundLine4" Text="test" 
                        Margin="9,-7,0,0" Style="{StaticResource BolderPhoneTextTitle}"/>
         </StackPanel>
 
-        <StackPanel x:Name="TimePanel" Grid.Row="1" Margin="12,110,0,0" > <!-- L, T, R, B -->
+        <StackPanel x:Name="TimePanel" Grid.Row="1" Margin="12,0,0,0" > <!-- L, T, R, B -->
              <TextBlock x:Name="Time" Text="12:14" 
                        Margin="9,0,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
             <TextBlock x:Name="DayOfWeek" Text="Friday" 
